# estategap

./: .codecov.yml  .dockerignore  .gitignore  .golangci.yml  .helmignore  CLAUDE.md  Makefile  buf.gen.yaml  buf.yaml  docker-bake.hcl  estategap-orchestrator.sh  go.work  pyproject.toml
libs/common/: pyproject.toml
libs/common/alembic/versions/: 020_ai_chat_visual_references.py
libs/common/estategap_common/: __init__.py  db.py  logging.py  nats_client.py  time_util.py
libs/common/estategap_common/broker/: __init__.py  kafka_broker.py  kafka_lag.py  types.py
libs/common/estategap_common/models/: __init__.py  _base.py  alert.py  conversation.py  listing.py  ml.py  reference.py  scoring.py  user.py  zone.py
libs/common/estategap_common/s3client/: __init__.py  client.py  config.py  test_client.py
libs/common/estategap_common/testing/: __init__.py  assertions.py  factories.py  fixtures.py  kafka.py
libs/common/proto/estategap/: __init__.py
libs/common/scripts/: export_schemas.py
libs/common/testing/: __init__.py  assertions.py  factories.py  fixtures.py
libs/common/tests/: __init__.py  test_kafka_broker.py  test_time_util.py
libs/common/tests/models/: __init__.py  test_alert.py  test_listing.py  test_scoring.py  test_user.py  test_validators.py  test_zone.py
services/ai-chat/: .env.example  Dockerfile  main.py  pyproject.toml
services/ai-chat/estategap_ai_chat/: __init__.py  __main__.py  config.py  finalization.py  market_context.py  metrics.py  parser.py  server.py  servicer.py  session.py  subscription.py  visual_refs.py
services/ai-chat/estategap_ai_chat/prompts/: __init__.py  system_prompt.jinja2
services/ai-chat/estategap_ai_chat/providers/: __init__.py  base.py  claude.py  fake_provider.py  litellm.py  openai.py
services/ai-chat/tests/: conftest.py  test_smoke.py
services/ai-chat/tests/acceptance/: test_conversation_flow.py  test_quickstart_smoke.py
services/ai-chat/tests/integration/: test_session.py  test_visual_refs.py
services/ai-chat/tests/unit/: test_parser.py  test_providers.py  test_subscription.py
services/ml/: .env.example  Dockerfile  main.py  pyproject.toml
services/ml/estategap_ml/: __init__.py  __main__.py  config.py  kafka_publisher.py  nats_publisher.py  settings.py
services/ml/estategap_ml/config/: __init__.py  features_base.yaml  features_es.yaml  features_fr.yaml  features_gb.yaml  features_it.yaml  features_nl.yaml  features_us.yaml
services/ml/estategap_ml/features/: __init__.py  __main__.py  config.py  encoders.py  engineer.py  zone_stats.py
services/ml/estategap_ml/scorer/: __init__.py  __main__.py  comparables.py  db_writer.py  feature_labels.py  inference.py  kafka_consumer.py  metrics.py  model_registry.py  nats_consumer.py  server.py  servicer.py  shap_explainer.py
services/ml/estategap_ml/trainer/: __init__.py  __main__.py  data_export.py  evaluate.py  mlflow_logger.py  onnx_export.py  registry.py  train.py
services/ml/tests/: conftest.py  scorer_support.py  test_smoke.py
services/ml/tests/acceptance/: test_full_pipeline.py  test_scoring_e2e.py
services/ml/tests/integration/: test_data_export.py  test_nats_consumer.py  test_onnx_roundtrip.py  test_registry_db.py  test_scorer_grpc.py
services/ml/tests/scorer/: test_heuristic_fallback.py  test_scorer_dispatch.py
services/ml/tests/trainer/: test_feature_config.py  test_transfer_learning.py
services/ml/tests/unit/: test_comparables.py  test_encoders.py  test_feature_engineer.py  test_inference.py  test_registry.py  test_shap_explainer.py
services/pipeline/: .env.example  Dockerfile  alembic.ini  pyproject.toml
services/pipeline/alembic/: env.py  script.py.mako
services/pipeline/alembic/versions/: 001_extensions.py  002_reference_tables.py  003_listings.py  004_zones.py  005_users.py  006_alerts.py  007_ai.py  008_ml_models.py  009_zone_statistics.py  010_seed_data.py  011_users_allowed_countries.py  012_subscriptions.py  013_alert_rules_history_v2.py  014_pipeline_quarantine.py  015_enrichment.py  016_model_versions.py  017_listings_scoring_columns.py  018_alert_rules_add_frequency.py  019_notification_dispatcher.py  020_zones_user_id.py  021_users_preferred_currency.py  022_portfolio_properties.py  025_dvf_transactions.py  025_eu_listing_fields.py  026_uk_price_paid.py  027_omi_zones.py  028_add_performance_indexes.py  e9f0a1b2c3d4_026_add_us_listing_fields.py  f0a1b2c3d4e5_027_add_onboarding_completed.py
services/pipeline/config/mappings/: es_fotocasa.yaml  es_idealista.yaml  fr_bienici.yaml  fr_leboncoin.yaml  fr_seloger.yaml  (+7 more)
services/pipeline/estategap_pipeline/: __init__.py
services/pipeline/tests/: conftest.py  test_smoke.py
services/spider-workers/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
services/spider-workers/estategap_spiders/: __init__.py  browser.py  config.py  consumer.py  http_client.py  metrics.py  models.py  proxy_client.py  quarantine.py  settings.py
services/spider-workers/tests/: conftest.py  test_smoke.py
tests/e2e/: __init__.py  collect-artifacts.sh  conftest.py  pyproject.toml  pytest.ini
tests/e2e/api/: __init__.py  conftest.py  test_admin.py  test_alerts.py  test_auth.py  test_errors.py  test_listings.py  test_ml.py  test_portfolio.py  test_rate_limiting.py  test_reference.py  test_subscriptions.py  test_zones.py
tests/e2e/concurrency/: __init__.py  conftest.py  test_concurrent_alerts.py  test_concurrent_chat.py  test_concurrent_crm.py  test_concurrent_search.py
tests/e2e/helpers/: __init__.py  assertions.py  client.py  fixtures.py  kafka_injector.py  nats_injector.py  redis_reset.py  ws_client.py
tests/e2e/websocket/: __init__.py  conftest.py  test_chat_protocol.py  test_connection.py  test_deal_alert.py  test_image_carousel.py  test_keepalive.py  test_reconnection.py
tests/fixtures/: alerts.json  load.py  pyproject.toml  users.json
tests/fixtures/conversations/: sample_01.json
tests/fixtures/listings/: es.json  fr.json  gb.json  it.json  pt.json
tests/fixtures/ml-models/: generate.py
tests/fixtures/zones/: es.json  fr.json  gb.json  it.json  pt.json
(+1127 files in other folders)
