[project]
name = "estategap-common"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "nats-py[nkeys]>=2",
    "asyncpg>=0.29",
    "structlog>=24",
    "grpcio>=1.62",
    "grpcio-tools>=1.62",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "mypy",
    "ruff",
    "mypy-protobuf",
]

[dependency-groups]
dev = [
    "alembic>=1.13",
    "boto3>=1.34",
    "mypy",
    "mypy-protobuf",
    "psycopg2-binary>=2.9",
    "pytest",
    "pytest-asyncio",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "redis>=5.0",
    "respx>=0.21",
    "ruff",
    "testcontainers[postgres,redis]>=4.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["estategap_common", "proto/estategap"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers --cov=estategap_common --cov-branch --cov-report=xml --cov-report=term-missing --cov-fail-under=80"
markers = [
    "unit: Unit tests that run without external services.",
    "integration: Tests that require real backing services or containers.",
    "slow: Tests whose runtime is expected to exceed the fast unit-test path.",
]
