[project]
name = "estategap-ai-chat"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.35",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "estategap-common",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "mypy",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["estategap_ai_chat"]

[tool.uv.sources]
estategap-common = { path = "../../libs/common", editable = true }
