[project]
name = "estategap-ml"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "lightgbm>=4.3",
    "onnxruntime>=1.18",
    "shap>=0.45",
    "estategap-common",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "mypy",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["estategap_ml"]

[tool.uv.sources]
estategap-common = { path = "../../libs/common", editable = true }
