[project]
name = "estategap-pipeline"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "geoalchemy2>=0.14",
    "httpx>=0.27",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
    "estategap-common",
]

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "pytest-asyncio",
    "ruff",
    "testcontainers[postgres]>=4.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["estategap_pipeline", "src/pipeline"]

[tool.uv.sources]
estategap-common = { path = "../../libs/common", editable = true }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = ["src"]
