[project]
name = "estategap-spiders"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "scrapy>=2.11",
    "playwright>=1.43",
    "estategap-common",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "mypy",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["estategap_spiders"]

[tool.uv.sources]
estategap-common = { path = "../../libs/common", editable = true }
