[project]
name = "estategap-test-fixtures"
version = "0.1.0"
description = "Fixture generation and seed data tooling for the EstateGap kind environment"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.29",
  "boto3>=1.34",
  "onnx>=1.16",
  "onnxruntime>=1.18",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "redis>=5.0",
  "scikit-learn>=1.5",
  "skl2onnx>=1.17",
]

[tool.uv]
package = false
